# python-study

./: doc.md
fastapi-stydy/: README.md  alembic.ini  main.py  pyproject.toml
fastapi-stydy/alembic/: env.py
fastapi-stydy/alembic/versions/: 40a1f09e4e34_second.py  699e4a6c38cc_first.py
fastapi-stydy/app/: __init__.py  application.py  database.py
fastapi-stydy/app/exception/: __init__.py
fastapi-stydy/app/models/: city.py
fastapi-stydy/app/routers/: __init__.py
fastapi-stydy/app/routers/v1/: __init__.py  city.py
fastapi-stydy/app/schemas/: city.py  user.py
fastapi-stydy/app/services/: city.py
leetcode/: main.py
lesson1/: async_test.py  asyncio_test.py  class_test.py  control_flow_test.py  data_structures_test.py  generator_test.py  hello_world.py
lesson2/: asymcio.md  lesson.md  流畅的Python.md
tools/: anaconda.md
