[tool.poetry]
name = "fastapi-stydy"
version = "0.1.0"
description = ""
authors = ["wuji <shidongzhang@xyz10.com>"]
readme = "README.md"
packages = [{include = "fastapi_stydy"}]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = {extras = ["email"], version = "^1.10.2"}
uvicorn = "^0.18.3"
fastapi = {extras = ["uvicorn"], version = "^0.85.0"}
sqlalchemy = "^1.4.41"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
